Alignment issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,7 +86,7 @@
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: repeat(5, 30px);
-  grid-gap: 15px;
+  grid-gap: 25px;
   justify-items: center;
   width: 100%;
   margin: 10px;
